--- a/R_Scripts/Anomaly_Flow_data/Anomaly_Flow_data.Rmd
+++ b/R_Scripts/Anomaly_Flow_data/Anomaly_Flow_data.Rmd
@@ -137,7 +137,7 @@ for (file in files){
   frame_cells.melted <- melt(frame_cells,
                              measure.vars = c("PeacoQC",
                                               "flowCut",
-                                              "FlowAI",
+                                              "flowAI",
                                               "flowClean"))
   sampled_cells <- sample(nrow(ff), 5000)
   
