--- a/R_Scripts/Spectral_data/Spectral_data.Rmd
+++ b/R_Scripts/Spectral_data/Spectral_data.Rmd
@@ -113,7 +113,7 @@ frame_cells <- ExtractQCCellsMass(file, ff, directory = "Spectral_data")
 frame_cells.melted <- melt(frame_cells,
                            measure.vars = c("PeacoQC",
                                             "flowCut",
-                                            "FlowAI",
+                                            "flowAI",
                                             "flowClean"))
 sampled_cells <- sample(nrow(ff), 5000)
 
